Bug 64143 - vdpau (shaders) regression since vl/buffer: use 2D_ARRAY instead of 3D textures
Summary: vdpau (shaders) regression since vl/buffer: use 2D_ARRAY instead of 3D textures
Status: CLOSED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/Gallium/r600 (show other bugs)
Version: git
Hardware: Other All
: medium normal
Assignee: Default DRI bug account
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-05-02 09:08 UTC by Andy Furniss
Modified: 2013-05-03 10:33 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Andy Furniss 2013-05-02 09:08:51 UTC
non uvd mpeg2 decode was never perfect on my rv790 (though I think that is a software issue as it's the same with xvmc softpipe - vdpau softpipe untested due to crash).

It is, however a lot worse for vdpau since -


commit 7d2f2a0c890b1993532a45c8c392c28950ddc06e
Author: Christian König <christian.koenig@amd.com>
Date:   Tue Apr 30 14:40:40 2013 +0200

    vl/buffer: use 2D_ARRAY instead of 3D textures
    
    Signed-off-by: Christian König <christian.koenig@amd.com>
Comment 1 Christian König 2013-05-02 14:08:54 UTC
Just send a patch fixing this to mesa dev.
Comment 2 Andy Furniss 2013-05-02 20:14:21 UTC
(In reply to comment #1)
> Just send a patch fixing this to mesa dev.

Back to normal with those applied.
Comment 3 Christian König 2013-05-03 10:33:51 UTC
Thx for testing.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.