vl/idct: fix for commit 7d2f2a0c890b1993532a45c8c392c28950ddc06e

We still need the option for handling 3D textures as well.

Should fix: https://bugs.freedesktop.org/show_bug.cgi?id=64143

Signed-off-by: Christian König <christian.koenig@amd.com>